--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest --config ./jest.config.ts --collect-coverage"
   },
   "private": true,
   "dependencies": {
@@ -26,14 +26,13 @@
     "@angular-devkit/build-angular": "~13.1.2",
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
-    "@types/jasmine": "~3.10.0",
+    "@testing-library/angular": "^11.0.4",
+    "@types/jest": "^27.5.1",
     "@types/node": "^12.11.1",
-    "jasmine-core": "~3.10.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
+    "jest": "^28.1.0",
+    "jest-preset-angular": "^12.0.1",
+    "ts-jest": "^28.0.3",
+    "ts-node": "^10.8.0",
     "typescript": "~4.5.2"
   }
 }
